--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,43 @@
+/* vt323-regular - latin */
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/vt323-v11-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('VT323 Regular'), local('VT323-Regular'),
+       url('../fonts/vt323-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/vt323-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/vt323-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/vt323-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/vt323-v11-latin-regular.svg#VT323') format('svg'); /* Legacy iOS */
+}
+
+/* ubuntu-mono-regular - latin */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/ubuntu-mono-v9-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'),
+       url('../fonts/ubuntu-mono-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/ubuntu-mono-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/ubuntu-mono-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/ubuntu-mono-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/ubuntu-mono-v9-latin-regular.svg#UbuntuMono') format('svg'); /* Legacy iOS */
+}
+
 body {
-	background-color: #303742;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	background-image: url("../img/background-comp.jpg");
+	background-position: center;
+}
+
+* {
+	font-size: 1rem;
 }
 
 .container {
-	min-height: calc(100vh - 2em);
+	background-color: #303742f0 !important;
+	min-height: 100vh;
 	width: 100vw;
 	align-items: center;
 	margin-left: auto;
@@ -24,7 +56,7 @@ ul li {
 
 ul li div {
 	position: relative;
-	vertical-align: midule;
+	vertical-align: middle;
 }
 
 ul li img {
@@ -43,10 +75,22 @@ ul li .listText {
 }
 
 .panel .panel-body {
-	paliing-top: 0.8rem;
+	padding-top: 0.8rem;
 }
 
 #aboutMe {
 	margin-top: 1em;
 	margin-bottom: 0;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+.text, .panel-subtitle {
+	font-family: 'Ubuntu', sans-serif;
+}
+.h5, .h2 {
+	font-family: 'VT323', monospace;
+}
+
+.h5 {
+	font-size: 1.3rem;
 }
