Change jpeg Images to webp images for better performance

--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@
 }
 
 body {
-	background-image: url("../img/background-comp.jpg");
+	background-image: url("../img/background.webp");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
